@@ -1,3 +1,10 @@
+2010-11-29  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/RcppGSLForward.h: vector_view<T> now exposes a conversion 
+	operator to implicitely convert it to the associated gsl_vector_foo * type. 
+	Similarly matrix_view<T> expose a conversion operator to the associated
+	gsl matrix pointer 
+
 2010-11-28  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/RcppGSLForward.h: vector_view<T> now exposes a public data
